--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
 NEWSAPI_KEY=f3e7a55127d04820909c22369ed41119
+YT_CHANNEL_IDS=UCVTyTA7-g9nopHeHbeuvpRA,UCa6vGFO9ty8v5KZJXQxdhaw,UCwWhs_6x42TyRM4Wstoq8HA
